# sdp-2023-24

./: .gitignore  README.md
exams/2023-11-19/: README.md
exams/2023-11-19-0930/: README.md
exams/2023-11-19-0930/sample-solution/: CMakeLists.txt
exams/2023-11-19-0930/sample-solution/test/: test-additional.cpp
exams/2023-11-19/sample-solution/src/: CMakeLists.txt  solution.cpp
exams/2023-11-19/sample-solution/test/: CMakeLists.txt
exams/2023-11-19/template/src/: solution.cpp  solution.h
exams/2023-11-19/template/test/: test-additional.cpp  test-solution.cpp
exams/2023-12-17/: README.md
exams/2023-12-17/sample-solution/src/: Node.h  Solution.h
exams/2023-12-17/sample-solution/test/: CMakeLists.txt
exams/2023-12-17/template/src/: Solution.h
exams/2023-12-17/template/test/: TestNode.cpp  TestSolution.cpp
exams/2024-01-16/: README.md
exams/2024-01-16/sample-solution/src/: Solution.h  Utils.h
exams/2024-01-16/sample-solution/test/: CMakeLists.txt  SampleTree.h  Test-Additional.cpp  Test-Utils.cpp
exams/2024-01-16/template/src/: CMakeLists.txt  Solution.h  TreeNode.h
exams/2024-01-16/template/test/: Test-Solution.cpp  Test-TreeNode.cpp
homework/hw1/: README.md
homework/hw1/template/: CMakeLists.txt
homework/hw1/template/sample-inputs/: multiple.txt  single.txt
homework/hw1/template/src/application/: CMakeLists.txt  calc.cpp
homework/hw1/template/src/expression-lib/: CMakeLists.txt  expression.cpp  expression.h
homework/hw1/template/test/: CMakeLists.txt  test-expression.cpp
homework/hw2/: README.md
homework/hw2/template/: CMakeLists.txt
homework/hw2/template/src/application/: CMakeLists.txt  simulation.cpp
homework/hw2/template/src/simulator-lib/: CMakeLists.txt  bar-simulator.cpp  bar-simulator.h
homework/hw2/template/test/: CMakeLists.txt  test-simulation.cpp
homework/hw3/: README.md
homework/hw3/template/: CMakeLists.txt
homework/hw3/template/src/: CMakeLists.txt  IntegerSet.cpp  IntegerSet.h
homework/hw3/template/test/: CMakeLists.txt  test-IntegerSet.cpp
homework/hw4/: README.md
homework/hw4/template/sample-inputs/: dictionary.txt  filter.txt  text.txt
homework/hw4/template/src/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  application.cpp
homework/hw4/template/test/: CMakeLists.txt  test-Additional.cpp  test-Dictionary.cpp
lectures/: CMakeLists.txt
lectures/array-walking/: CMakeLists.txt
lectures/array-walking/src/: ArrayWalking.cpp
lectures/containers/: CMakeLists.txt
lectures/containers/include/containers/: DynamicArray.h  FixedSizeArray.h  HashTable.h  ListNode.h  Tree.h  TreeNode.h  TreeNodeIterator.h  TreeNodeOperations.h
lectures/containers/test/: CMakeLists.txt  SampleTree.h  Test-DynamicArray.cpp  Test-FixedSizeArray.cpp  Test-HashTable.cpp  Test-Tree.cpp  Test-TreeNode.cpp  Test-TreeNodeIterator.cpp  Test-TreeNodeOperations.cpp  test-ListNode.cpp
lectures/hash-benchmark/: CMakeLists.txt
lectures/hash-benchmark/src/: HashBenchmark.cpp
lectures/triangle/: CMakeLists.txt
lectures/triangle/include/triangle/: Triangle.h
lectures/triangle/test/: CMakeLists.txt  Test-Triangle.cpp
lectures/utils/: CMakeLists.txt
lectures/utils/include/utils/: Allocator.h  MockingObjects.h  SimpleStopwatch.h  Stopwatch.h
lectures/utils/test/: CMakeLists.txt  Test-Allocator.cpp  Test-MockingObjects.cpp
